--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/Capstone-Bangkit-C23-PC759/cc-admin-article#readme",
   "dependencies": {
-    "@hapi/hapi": "^21.3.2"
+    "@hapi/hapi": "^21.3.2",
+    "@hapi/jwt": "^3.2.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.1.4",
+    "joi": "^17.9.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.3"
   }
 }
