--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "cc-admin-article",
-  "version": "1.0.0",
-  "description": "Admin and Article API for Menhela project",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Capstone-Bangkit-C23-PC759/cc-admin-article.git"
-  },
-  "author": "syauqi",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Capstone-Bangkit-C23-PC759/cc-admin-article/issues"
-  },
-  "homepage": "https://github.com/Capstone-Bangkit-C23-PC759/cc-admin-article#readme",
-  "dependencies": {
-    "@hapi/hapi": "^21.3.2",
-    "@hapi/jwt": "^3.2.0",
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.1.4",
-    "joi": "^17.9.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.3.3"
-  }
+	"name": "cc-admin-article",
+	"version": "1.0.0",
+	"description": "Admin and Article API for Menhela project",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"dev": "nodemon server.js",
+		"create-env": "printenv > .env"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Capstone-Bangkit-C23-PC759/cc-admin-article.git"
+	},
+	"author": "syauqi",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Capstone-Bangkit-C23-PC759/cc-admin-article/issues"
+	},
+	"homepage": "https://github.com/Capstone-Bangkit-C23-PC759/cc-admin-article#readme",
+	"dependencies": {
+		"@hapi/hapi": "^21.3.2",
+		"@hapi/jwt": "^3.2.0",
+		"bcrypt": "^5.1.0",
+		"dotenv": "^16.1.4",
+		"joi": "^17.9.2",
+		"mysql": "^2.18.1",
+		"mysql2": "^3.3.3"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.22"
+	}
 }
